# firestore-db-and-auth-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  ci.sh  readme.md  service-account-for-tests.jwks
.github/ISSUE_TEMPLATE/: bug_report.md
.github/disabled_workflows/: musl.yml
.github/workflows/: integration.yml  musl.yml  rust.yml  style.yml  with_rocket.yml
doc/: auth_background.md  integration_tests.md  own_auth.md  rocket_integration.md
examples/: create_read_write_document.rs  firebase_user.rs  own_auth.rs  readme.md  rocket_http_protected_route.rs  session_cookie.rs  test_user_id.txt
examples/own_auth/: Cargo.toml  readme.md
examples/own_auth/src/: main.rs
examples/rocket_http_protected_route/: Cargo.toml  readme.md
examples/rocket_http_protected_route/src/: main.rs
examples/utils/: mod.rs
gen-tokens/: index.js  package-lock.json  package.json  webpack.config.js
gen-tokens/src/: index.js
src/: credentials.rs  documents.rs  dto.rs  errors.rs  firebase_rest_to_rust.rs  jwt.rs  lib.rs  sessions.rs  users.rs
src/documents/: delete.rs  list.rs  mod.rs  query.rs  read.rs  write.rs
src/rocket/: guard.rs  mod.rs
tests/: documents.rs  extract_test_credentials.sh  left_over_println.sh  service-account-for-tests.jwks  service-account-test.json  service-account-test.jwks  sessions.rs  users.rs
