[package]
name = "firestore-db-and-auth"
version = "0.8.0"
authors = ["David Gräff <david.graeff@web.de>"]
edition = "2018"
license = "MIT"
description = "This crate allows easy access to your Google Firestore DB via service account or OAuth impersonated Google Firebase Auth credentials."
readme = "readme.md"
keywords = ["firestore", "auth"]
categories = ["api-bindings","authentication"]
maintenance = { status = "passively-maintained" }
repository = "https://github.com/davidgraeff/firestore-db-and-auth-rs"

[dependencies]
cache_control = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
biscuit = "0.5"
ring = "0.16"
base64 = "0.13"
async-trait = "0.1"
tokio = { version = "1.13", features = ["macros"] }
futures = "0.3"
pin-project = "1.0"
http = "0.2"

[dependencies.rocket]
version = "0.4.6"
default-features = false
optional = true

# Render the readme file on doc.rs
[package.metadata.docs.rs]
features = [ "external_doc", "rocket_support" ]

[features]
default = ["rustls-tls", "unstable"]
rocket_support = ["rocket"]
rustls-tls = ["reqwest/rustls-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
unstable = []
external_doc = []

[[example]]
name = "create_read_write_document"
test = true

[[example]]
name = "firebase_user"
test = true

[[example]]
name = "own_auth"
test = true

[[example]]
name = "rocket_http_protected_route"
test = true
required-features = ["rustls-tls","rocket_support"]
